# drf_study

./: .env.dev  .gitignore  Dockerfile  Dockerfile.prod  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
drf_study/: asgi.py  settings.py  urls.py  wsgi.py
drf_study/study/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
drf_study/study/migrations/: 0001_initial.py  0002_study.py
drf_study/study/tests/: conftest.py  test_study_model.py  test_valid_study_serializer.py  test_views.py
